# claude-swap

./: README.md  pyproject.toml
src/claude_swap/: autoswitch.py  background.py  cli.py  exceptions.py  json_output.py  locking.py  menubar.py  oauth.py  session.py  settings.py  switcher.py  transfer.py  usage_store.py
src/claude_swap/tui/: app.py  autoview.py  data.py  widgets.py
tests/: conftest.py  test_autoswitch.py  test_background.py  test_cli.py  test_config_cli.py  test_json_output.py  test_oauth.py  test_session.py  test_settings.py  test_switcher.py  test_transfer.py  test_tui.py  test_usage_store.py
